--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
+<!-- the file is copy from https://chenqing253.github.io/ -->
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Zhihao Liu (RyuZhihao123)</title>
 
-    <meta name="author" content="Zhihao Liu">
+    <meta name="author" content="Qing CHEN">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -20,11 +21,11 @@
                 <tr style="padding:0px">
                     <td style="padding:2.5%;width:63%;vertical-align:middle">
                         <p style="text-align:center">
-                            <name>Zhihao Liu </name>  刘 志浩<br><br>
-                            Email: liuzh96 (at) outlook.com 
+                            <name>Qing CHEN </name>  陈 Qing<br><br>
+                            Email: qqing.chen@connect.polyu.hk
                         </p>
                         <p>
-                           <i> Hi, I am Zhihao, currently working towards a PhD degree. My interest lies at the intersection of interactive computer graphics, geometry modeling and 3D vision.
+                           <i> Hi, I am Chen Qing, you can call me Herry, I am working for a PhD degree. My interest include granular material, constitutive modeling, multiscale and multiphysics numerical simulation.
                                 <br><br></i>
                             
  <!--                            <b>MOTTO</b>: 《師說》 韓愈: <br>巫醫樂師百工之人，不恥相師；士大夫之族，曰師曰弟子云者，則群聚而笑之。問之，則曰：「彼與彼年相若也，道相似也。位卑則足羞，官盛則近諛。」 嗚呼！師道之不復可知矣。巫醫樂師百工之人，君子不齒，今其智乃反不能及，其可怪也歟！
@@ -33,11 +34,11 @@
                         </p>
                         <p style="text-align:center">
 
-                            <a href="https://scholar.google.com/citations?user=3SNYa0EAAAAJ">Google Scholar</a> &nbsp/&nbsp
-                            <a href="https://space.bilibili.com/8109631">Bilibili</a>&nbsp/&nbsp
+                            <!-- <a href="https://scholar.google.com/citations?user=3SNYa0EAAAAJ">Google Scholar</a> &nbsp/&nbsp -->
+                            <!--<a href="https://space.bilibili.com/8109631">Bilibili</a>&nbsp/&nbsp-->
                             <!-- <a href="data/CV_zhihaoliu.pdf">CV</a> &nbsp/&nbsp -->
-                            <a href="https://github.com/RyuZhihao123">Github</a>&nbsp
-                            /&nbsp<a href="https://ryuzhihao123.github.io/index-cn.html">中文</a>&nbsp/&nbsp
+                            <a href="https://github.com/chenqing253">Github</a>&nbsp
+                            <!--/&nbsp<a href="https://ryuzhihao123.github.io/index-cn.html">中文</a>&nbsp/&nbsp -->
                         </p>
                     </td>
                     <td style="padding:2.5%;width:15%;max-width:15%">
