--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                         <img src='image/tencent.jpg' width="100">
                     </td>
                     <td style="padding:10px;width:95%;vertical-align:middle;line-height:1.5">
-                        <papertitle>Tencent (Shenzhen) Technology Ltd.</papertitle>  
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <strong>Graphics Engineer (Full-time).</strong>
+                        <papertitle>No.</papertitle>  
+                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <strong>~</strong>
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 2021.
                         <br>
-                        Before my PhD, I worked as a full-time game graphics engineer at the <u> Game AI & Digital Content Research Center, Tencent IEG</u>, developing facial motion capture techniques.
+                        Before my PhD, I try find one...
                         <p></p>
                         <!-- <p>The monocular depth estimates produced by fully convolutional networks can be used to inform intrinsic image estimation.</p> -->
                     </td>
