--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Zhihao Liu (RyuZhihao123)</title>
+    <title>Qing CHEN (chenqing253)</title>
 
     <meta name="author" content="Qing CHEN">
     <meta name="viewport" content="width=device-width, initial-scale=1">
