--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@
                         <br>
                         <p></p>
                         <p> This project is to  learn basic knowledge about the physical simulation in computer graphics.
-                            <a href="https://dl.acm.org/doi/10.1145/2766996"
-                               target="_blank">[Jiang et al.]</a>. The algorithm is basically implemented in C++, while a few parts of numerical computation are achieved in Python and CUDA. The images are all rendered offine using the basic Ray-Tracing with OpenGL and C++.</p>
-                            &#10140; <a href="https://www.bilibili.com/video/BV11m4y1F7c6">[video]</a>
+                            The course mainly covers four directions, namely: 1) Rigid body simulation; 2) Mass spring, constraint and cloth simulation; 3) Elastic body simulation based on finite element; 4) Fluid simulation</p>
+                            &#10140;  
                     </td>
                 </tr>
 
